# wxbuilderblank

./: .vimrc  .ycm_extra_conf.py  CMakeLists.txt  test.fbp
src/: main.cpp  main.h  ui.cpp  ui.h
